Extremely WIP. Fighting through DynamicMessage instantiating an instance of the descriptor and not what it describes.